syntax = "proto3";

package dev.httpmarco.polocloud.v1.proto;

option java_package = "dev.httpmarco.polocloud.v1.services";
option java_multiple_files = true;

import "polocloud/v1/proto/object_utils.proto";

service ServiceController {
  rpc find(ServiceFindRequest) returns (ServiceFindResponse);
}

message ServiceFindRequest {
  optional string name = 1;
  optional GroupType type = 2;
}

message ServiceFindResponse {
  repeated ServiceSnapshot services = 1;
}

message ServiceSnapshot {
  GroupType server_type = 1;
  string group_name = 2;
  uint32 id = 3;
  uint32 minimum_memory = 4;
  uint32 maximum_memory = 5;
  string hostname = 6;
  uint32 port = 7;
  uint32 max_player_count = 8;
  uint32 player_count = 9;
  double memory_usage = 10;
  double cpu_usage = 11;
  ServiceState state = 12;
  map<string, string> properties = 13;
}

enum ServiceState {
  PREPARING = 0;
  STARTING = 1;
  ONLINE = 2;
  STOPPING = 3;
  STOPPED = 4;
}